Spring - Item Create & Read